Add ScrollBars when menu items content exceeds available space